--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 	<h1>test-git</h1>
 	<div>div</div>
 	<div><span>테스트</span></div>
+	<ul>
+		<li>자정소</li>
+		<li>버전</li>
+    </ul>
 </body>
 </html>
